[tool.poetry]
name = "linux-process-visualization-api"
version = "0.1.0"
description = ""
authors = ["MDCG"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
unimport = "^1.1.0"
isort = "^5.12.0"
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
